[gd_scene load_steps=22 format=3 uid="uid://cmf2n8n1bp6an"]

[ext_resource type="Script" path="res://UI/Scripts/choix_sorts.gd" id="1_f5eif"]
[ext_resource type="Texture2D" uid="uid://b02mrbqksygw4" path="res://Classes/Cra/cra.png" id="1_txvm2"]
[ext_resource type="PackedScene" uid="uid://drtgbjheuymi7" path="res://UI/Displays/Scenes/affichage_stats_primaires.tscn" id="2_g4v8w"]
[ext_resource type="PackedScene" uid="uid://5i2iaiitef1b" path="res://UI/Displays/Scenes/affichage_stats_secondaires.tscn" id="3_6q5fj"]
[ext_resource type="Texture2D" uid="uid://bd73pmdft7ibe" path="res://UI/Buttons/equipements_base.png" id="4_ruewy"]
[ext_resource type="Texture2D" uid="uid://darrvw5h2erch" path="res://UI/Buttons/equipements_clicked.png" id="5_nq0h2"]
[ext_resource type="Texture2D" uid="uid://c8d2rikvgcf47" path="res://UI/Buttons/equipements_hoevered.png" id="6_3uysc"]
[ext_resource type="Texture2D" uid="uid://bknc5skjp7s4v" path="res://UI/Buttons/retour_base.png" id="7_i3cpl"]
[ext_resource type="Texture2D" uid="uid://dd20mihsbd7tw" path="res://UI/Buttons/retour_clicked.png" id="8_jx3lw"]
[ext_resource type="Texture2D" uid="uid://bsx000i85450y" path="res://UI/Buttons/retour_hovered.png" id="9_76y1y"]
[ext_resource type="Texture2D" uid="uid://c3kxsj8jry80l" path="res://UI/Displays/spell_large.png" id="10_g5q0f"]
[ext_resource type="Texture2D" uid="uid://bchvky20yqgij" path="res://Classes/Cra/Sorts/fleche_absorbante.png" id="11_mu0i7"]
[ext_resource type="Texture2D" uid="uid://dqk6yu2s43cro" path="res://Classes/Cra/Sorts/fleche_chercheuse.png" id="12_ji2gl"]
[ext_resource type="Texture2D" uid="uid://by8ol7f048f2y" path="res://Classes/Cra/Sorts/fleche_de_recul.png" id="13_vcsd2"]
[ext_resource type="Texture2D" uid="uid://cjsvrehuddqex" path="res://Classes/Cra/Sorts/fleche_enflamme.png" id="14_c64dg"]
[ext_resource type="Texture2D" uid="uid://bbmqi47dk52lt" path="res://Classes/Cra/Sorts/fleche_glacee.png" id="15_6qlqd"]
[ext_resource type="Texture2D" uid="uid://br7d5s8lhuq8i" path="res://Classes/Cra/Sorts/fleche_magique.png" id="16_6aou2"]
[ext_resource type="Texture2D" uid="uid://b5iattby7jqbt" path="res://Classes/Cra/Sorts/oeil_de_lynx.png" id="17_w7pyo"]
[ext_resource type="Texture2D" uid="uid://ij50u7n5ady8" path="res://Classes/Cra/Sorts/oeil_de_taupe.png" id="18_v8w13"]
[ext_resource type="Texture2D" uid="uid://v48d4psl54bt" path="res://Classes/Cra/Sorts/tir_tranquilisant.png" id="19_fobqw"]
[ext_resource type="Texture2D" uid="uid://bfq45y8ne7205" path="res://Classes/Cra/Sorts/tourmente_visuel.png" id="20_y0usq"]

[node name="ChoixSorts" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5eif")

[node name="Background" type="ColorRect" parent="."]
offset_left = -80.0
offset_top = -73.0
offset_right = 1683.0
offset_bottom = 965.0
color = Color(0.529412, 0.478431, 0.317647, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 93.0
offset_top = 7.0
offset_right = 163.0
offset_bottom = 135.0
texture = ExtResource("1_txvm2")

[node name="AffichageStatsPrimaires" parent="." instance=ExtResource("2_g4v8w")]
offset_top = 66.0
offset_right = 250.0
offset_bottom = 177.0

[node name="AffichageStatsPrimaires2" parent="." instance=ExtResource("3_6q5fj")]
offset_top = 177.0
offset_right = 248.0
offset_bottom = 630.0

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 61.0
offset_top = 693.0
offset_right = 191.0
offset_bottom = 797.0

[node name="Equipements" type="TextureButton" parent="GridContainer"]
offset_right = 130.0
offset_bottom = 32.0
texture_normal = ExtResource("4_ruewy")
texture_pressed = ExtResource("5_nq0h2")
texture_hover = ExtResource("6_3uysc")

[node name="Retour" type="TextureButton" parent="GridContainer"]
offset_top = 36.0
offset_right = 130.0
offset_bottom = 68.0
texture_normal = ExtResource("7_i3cpl")
texture_pressed = ExtResource("8_jx3lw")
texture_hover = ExtResource("9_76y1y")

[node name="GridContainer2" type="GridContainer" parent="."]
offset_left = 712.0
offset_top = 30.0
offset_right = 1136.0
offset_bottom = 85.0
theme_override_constants/h_separation = 20
columns = 6

[node name="TextureButton" type="TextureButton" parent="GridContainer2"]
offset_right = 54.0
offset_bottom = 55.0
texture_normal = ExtResource("10_g5q0f")

[node name="TextureButton2" type="TextureButton" parent="GridContainer2"]
offset_left = 74.0
offset_right = 128.0
offset_bottom = 55.0
texture_normal = ExtResource("10_g5q0f")

[node name="TextureButton3" type="TextureButton" parent="GridContainer2"]
offset_left = 148.0
offset_right = 202.0
offset_bottom = 55.0
texture_normal = ExtResource("10_g5q0f")

[node name="TextureButton4" type="TextureButton" parent="GridContainer2"]
offset_left = 222.0
offset_right = 276.0
offset_bottom = 55.0
texture_normal = ExtResource("10_g5q0f")

[node name="TextureButton5" type="TextureButton" parent="GridContainer2"]
offset_left = 296.0
offset_right = 350.0
offset_bottom = 55.0
texture_normal = ExtResource("10_g5q0f")

[node name="TextureButton6" type="TextureButton" parent="GridContainer2"]
offset_left = 370.0
offset_right = 424.0
offset_bottom = 55.0
texture_normal = ExtResource("10_g5q0f")

[node name="GridContainer3" type="GridContainer" parent="."]
offset_left = 380.0
offset_top = 150.0
offset_right = 1741.0
offset_bottom = 898.0
scale = Vector2(0.8, 0.8)
columns = 5

[node name="TextureButton" type="TextureButton" parent="GridContainer3"]
offset_right = 269.0
offset_bottom = 372.0
texture_normal = ExtResource("11_mu0i7")

[node name="TextureButton2" type="TextureButton" parent="GridContainer3"]
offset_left = 273.0
offset_right = 542.0
offset_bottom = 372.0
texture_normal = ExtResource("12_ji2gl")

[node name="TextureButton3" type="TextureButton" parent="GridContainer3"]
offset_left = 546.0
offset_right = 815.0
offset_bottom = 372.0
texture_normal = ExtResource("13_vcsd2")

[node name="TextureButton4" type="TextureButton" parent="GridContainer3"]
offset_left = 819.0
offset_right = 1088.0
offset_bottom = 372.0
texture_normal = ExtResource("14_c64dg")

[node name="TextureButton5" type="TextureButton" parent="GridContainer3"]
offset_left = 1092.0
offset_right = 1361.0
offset_bottom = 372.0
texture_normal = ExtResource("15_6qlqd")

[node name="TextureButton6" type="TextureButton" parent="GridContainer3"]
offset_top = 376.0
offset_right = 269.0
offset_bottom = 748.0
texture_normal = ExtResource("16_6aou2")

[node name="TextureButton7" type="TextureButton" parent="GridContainer3"]
offset_left = 273.0
offset_top = 376.0
offset_right = 542.0
offset_bottom = 748.0
texture_normal = ExtResource("17_w7pyo")

[node name="TextureButton8" type="TextureButton" parent="GridContainer3"]
offset_left = 546.0
offset_top = 376.0
offset_right = 815.0
offset_bottom = 748.0
texture_normal = ExtResource("18_v8w13")

[node name="TextureButton9" type="TextureButton" parent="GridContainer3"]
offset_left = 819.0
offset_top = 376.0
offset_right = 1088.0
offset_bottom = 748.0
texture_normal = ExtResource("19_fobqw")

[node name="TextureButton10" type="TextureButton" parent="GridContainer3"]
offset_left = 1092.0
offset_top = 376.0
offset_right = 1361.0
offset_bottom = 748.0
texture_normal = ExtResource("20_y0usq")

[connection signal="pressed" from="GridContainer/Equipements" to="." method="_on_equipements_pressed"]
[connection signal="pressed" from="GridContainer/Retour" to="." method="_on_retour_pressed"]
